# kaggle

./: .gitignore  0010-explore-your-data.py  001050-underfitting-overfitting.py  0015-decisionTreeRegressor.py  0020-train_test_split.py  0025-max_leaf_nodes.py  0030-random-forests.py  0050-house-price-competition.py  0055-intermediate-ml.py  0065-melb-data.py  0070-categorical-values.py  README.md  pyproject.toml
